<resources>
    <string name="app_name">MovieDB</string>

    <string name="img_portrait_ratio">H,3:5</string>
    <string name="img_landscape_ratio">H,2:1</string>
    <string name="img_portrait_ratio_chat">H,4:5</string>

    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of JCGV is available. Please update to version</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ok">Ok</string>
    <string name="btn_play">Play</string>
    <string name="incorrect_user_name_or_password">Incorrect username or password</string>
    <string name="error_connecting">Error connecting</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="error_retrieving_data">Error retrieving data. Please try again later</string>
    <string name="error">Error</string>
    <string name="please_fill_in_username">Please fill in username</string>
    <string name="please_fill_in_password">Please fill in password</string>

    <string name="logout">Log Out</string>

    <string name="password_description">show password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_list">My List</string>
    <string name="profile">Profile</string>

    <string name="my_watch_list">WatchList</string>

    <string name="no_internet">Oops! No Internet Connection</string>

    <string name="movies_tv">Movies &amp; TV </string>

    <string name="no_watchlist">You have not added any watchlist yet.</string>

    <string name="popular">Popular</string>
    <string name="top_related">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_all">See All</string>

    <string name="movie_quote">The whole of life is just like watching a film</string>
    <string name="not_rated_yet">You have not rated any movies yet.</string>

    <string name="mylist_not_login_text">Login to rate your favourite movies</string>
    <string name="profile_not_login_text">Login and play your favourites</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
