<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlack"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_large"
        android:gravity="center">

        <EditText
            android:id="@+id/etUserName"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/bg_profile_edittext"
            android:layout_margin="@dimen/margin_normal"
            android:paddingLeft="@dimen/margin_small"/>

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/bg_profile_edittext"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:paddingLeft="@dimen/margin_small"/>

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/bg_button"
            android:layout_margin="@dimen/margin_normal"/>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>