<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorLightBlack"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="left|center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/padding_10"
            android:src="@drawable/themoviedb"
            />

    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        shimmer:duration="1000">

        <!-- Adding 7 rows of placeholders -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/data_placeholder_layout" />
            <include layout="@layout/data_placeholder_layout" />
            <include layout="@layout/data_placeholder_layout" />
            <include layout="@layout/data_placeholder_layout" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>
    <ScrollView
        android:id="@+id/sv_home"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/now_playing"
                    android:textSize="16dp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="@dimen/alerter_text_medium"
                    android:layout_marginTop="@dimen/margin_small"/>

                <Button
                    android:id="@+id/tv_now_playing"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:text="@string/see_all"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/rounded_button"
                    android:layout_marginStart="@dimen/alerter_text_medium"
                    android:layout_marginTop="@dimen/margin_small"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rv_now_playing"
                android:padding="3dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/popular"
                    android:textSize="16dp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="@dimen/alerter_text_medium"
                    android:layout_marginTop="@dimen/margin_small"/>

                <Button
                    android:id="@+id/tv_sell_all_popular"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:text="@string/see_all"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_button"
                    android:layout_marginStart="@dimen/alerter_text_medium"
                    android:layout_marginTop="@dimen/margin_small"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rv_popular"
                android:padding="@dimen/margin_small"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_size_ex_small"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/top_related"
                    android:textSize="16dp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="@dimen/alerter_text_medium"/>

                <Button
                    android:id="@+id/tv_top_rated"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:text="@string/see_all"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_button"
                    android:layout_marginStart="@dimen/alerter_text_medium"
                    android:layout_marginTop="@dimen/margin_small"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rv_top_rated"
                android:padding="@dimen/margin_small"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_size_ex_small"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/upcoming"
                    android:textSize="16dp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="@dimen/alerter_text_medium"/>

                <Button
                    android:id="@+id/tv_upcoming"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:text="@string/see_all"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_button"
                    android:layout_marginStart="@dimen/alerter_text_medium"
                    android:layout_marginTop="@dimen/margin_small"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rv_upcoming"
                android:padding="@dimen/margin_small"/>



        </LinearLayout>
    </ScrollView>
</FrameLayout>