<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlack"
    tools:context=".fragment.ProfileFragment">

    <LinearLayout
        android:id="@+id/layoutNotLoginShow"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginBottom="?attr/actionBarSize"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:text="@string/movie_quote"
            android:textColor="@color/color_palette3"
            android:fontFamily="@font/parisienne"
            android:textSize="@dimen/txt_size_x_large"
            android:layout_marginBottom="@dimen/margin_xxxxlarge"
            android:layout_height="@dimen/edittext_height"/>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/profile_not_login_text"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/titillium_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnSignIn"
                android:text="Sign In"
                android:fontFamily="@font/titillium_web"
                android:background="@drawable/bg_button"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"/>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/layoutLoginShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnLogOut"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:layout_gravity="right"
            android:drawableRight="@drawable/icon_exit"
            android:drawablePadding="@dimen/margin_xsmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginLeft="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp">

                <View
                    android:background="@drawable/bg_circle_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </View>

                <TextView
                    android:id="@+id/tvLetters"
                    android:layout_centerInParent="true"
                    android:text="US"
                    android:textSize="@dimen/txt_size_xxx_large"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </RelativeLayout>


            <TextView
                android:id="@+id/tvUserName"
                android:text="User Name"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/lora_regular"
                android:textSize="@dimen/txt_size_x_large"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:text="@string/my_watch_list"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_large"
            android:textStyle="bold"
            android:paddingLeft="@dimen/padding_10"
            android:paddingTop="4dp"
            android:paddingBottom="@dimen/padding_4"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_watch_list_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_small"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_data_error"
                android:visibility="gone"
                android:layout_margin="@dimen/margin_large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@color/colorTextColorPrimary"
                android:alpha="0.4"
                app:cardElevation="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/colorTextColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/icon_empty_box"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.example.moviedb.custom_control.MyanTextView
                        android:layout_marginTop="@dimen/margin_small"
                        android:gravity="center"
                        android:textColor="@color/color_white_press"
                        android:textSize="@dimen/txt_size_large"
                        android:text="Oops! Couldn't get movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>




</FrameLayout>